--- a/_posts/2018-08-24-第一篇文章（随便写点什么不打算写技术文）.md
+++ b/_posts/2018-08-24-第一篇文章（随便写点什么不打算写技术文）.md
@@ -20,7 +20,7 @@ tags: 闲文
 
 这里的日本人还不错，日复一日重复的活着，我的鲁莽与这里格格不入，但这是我选择的修行，更像是闭关的修炼，修炼自己的心性。
 
->雨后暮色苍白，驶过暮色苍白，旧铁皮往南开，恋人已不再，收听浓烟下的，诗歌电台
+>雨有车驶来，驶过暮色苍白，旧铁皮往南开，恋人已不再，收听浓烟下的，诗歌电台
 
 >——————陈鸿宇《理想三旬》
 
