--- a/_posts/2021-09-01-常用linux命令查询手册.md
+++ b/_posts/2021-09-01-常用linux命令查询手册.md
@@ -11,4 +11,6 @@ tags: linux
 特此记录一下一些基本的命令使用方式，用来学习和将来查阅。
 
 ## 查看进程命令
+
+[Link to a document]({{ site.baseurl }}{%linux/ps/ps.md %})
 [ps 命令](linux/ps/ps.md)
