--- a/_posts/2021-09-01-常用linux命令查询手册.md
+++ b/_posts/2021-09-01-常用linux命令查询手册.md
@@ -22,9 +22,9 @@ ps命令是一个相当强大地Linux进程查看命令。
 
 ## 语法
 
-ps [选项参数]
 
-## 选项参数
+
+### 选项参数
 
 - -e 显示所有进程,环境变量
 
@@ -44,7 +44,7 @@ ps [选项参数]
 
 - -u 以用户为主的来显示程序状况
 
-## 常见用法
+### 常见用法
 
 ### ps -ef
 
